# password-cli

./: .env.example  .gitignore  Cargo.toml  README.md
sql/: create.sql
src/: bench.rs  cli.rs  encryption.rs  lib.rs  main.rs
src/model/: database.rs  mod.rs
