[package]
name = "password-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
ciborium = "0.2.1"
clap = { version = "4.4.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac-sha256 = "1.1.7"
log = "0.4.20"
rpassword = "7.2.0"
rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
serde = { version = "1.0.188", features = ["derive"] }
